@@ -808,6 +808,10 @@ module Sequel
 
     # Proxy the filter_expr call to the dataset, used for creating constraints.
     def filter_expr(*args, &block)
+      if args.length == 1 && args.first.is_a?(Proc) && !block
+        block = args.first
+        args = nil
+      end
       schema_utility_dataset.literal(schema_utility_dataset.send(:filter_expr, *args, &block))
     end
 
